[docs] Fix permalink css styling on Firefox.

--- a/docs/website/docs/assets/stylesheets/iree.css
+++ b/docs/website/docs/assets/stylesheets/iree.css
@@ -16,6 +16,7 @@
   position: relative;
   top: 5px;
   left: 0;
+  display: inline;
 }
 
 pre.highlight code {
